--- a/device/recensionedevice.html
+++ b/device/recensionedevice.html
@@ -107,6 +107,8 @@
                         <h1 class="titolorosso left" id="titolo"></h1>
                     </div>
                     <div class="col-md-12" id="recensioni"></div>
+                    <div class="col-md-12" id="correlati"></div>
+                    
                 </div>
 			</div>
 		</div>
