--- a/device/specifichedevice.html
+++ b/device/specifichedevice.html
@@ -97,6 +97,7 @@ var url = "http://guidoantoniomatteo.altervista.org/components/device/getSpecifi
                         <h1 class="titolorosso left" id="titolo"></h1>
                     </div>
                     <div class="col-md-12" id="specifiche"></div>
+                    <div class="col-md-12" id="correlati"></div>
                 </div>
 			</div>
 		</div>
