--- a/piani/pianimaincategory.html
+++ b/piani/pianimaincategory.html
@@ -44,19 +44,24 @@
         
         for(i = 0; i < arr.length; i++) 
         {
-            out += "<div class='col-xs-4 grey-background current-link' style='height: inherit !important;'>" +
-                        "<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" >" +
-                        "<img src=\"" + arr[i].foto + "\" class=\"center\"/>"+
-                        "</a></div>";
-            out2 +="<div class=\"col-xs-4 blu-menu\">"+
-                "<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" >" +
-                            arr[i].nome + "</a></div>";
+            out += "<div class='col-sm-4 hidden-xs grey-background current-link' style='height: inherit !important;'>";
+            if(i>0) //il controllo su i è per disabilitare i link non cliccabili
+                out +="<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" class=\"btn btn-large disabled\" >";
+            else
+                out +="<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" style=\"padding-bottom: 6px;\" >";    //Lo style in questa linea serve per allineare i link disabled con quelli attivi    
+            out +="<img src=\"" + arr[i].foto + "\" class=\"center\"/></a></div>";
+            out2 +="<div class=\"col-sm-4 blu-menu\">";
+            if(i>0) //il controllo su i è per disabilitare i link non cliccabili
+                out2 +="<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" class=\"btn btn-large disabled\" >";
+            else
+                out2 +="<a href=\"http://guidoantoniomatteo.altervista.org/tim/piani/pianisubcategory.html?id=" + arr[i].id + "\" >";
+                out2 += arr[i].nome + "</a></div>";
                     out += "</div>";
                 }
                 
                 document.getElementById("categorie_grey").innerHTML = out;
                 document.getElementById("categorie_blu").innerHTML = out2;
-            }
+    }
     </script>
 
 
