link and all promotions

--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/style.css">
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/standardimport.css">
-    <link rel="stylesheet" type="text/css" href="css/innovazione.css">
-    <link rel="stylesheet" type="text/css" href="css/guido.css">
+    <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/innovazione.css">
+    <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/guido.css">
 
 </head>
 
@@ -48,7 +48,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img class="img-responsive img100" src="img/home/first.png" alt="home tim">
+                            <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/first.png" alt="home tim">
                             <div class="row">
                                 <div class="col-md-6 inner-presentation">
                                     <div>
@@ -63,7 +63,7 @@
                         </div>
 
                         <div class="item">
-                            <img class="img-responsive img100" src="img/home/second.png" alt="home tim">
+                            <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/second.png" alt="home tim">
                             <div class="row">
                                 <div class="col-md-6 inner-presentation">
                                     <div>
@@ -78,7 +78,7 @@
                         </div>
 
                         <div class="item">
-                            <img class="img-responsive img100" src="img/home/third.png" alt="home tim">
+                            <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/third.png" alt="home tim">
                             <div class="row">
                                 <div class="col-md-6 inner-presentation">
                                     <div>
