--- a/smart-life/sub-categories.html
+++ b/smart-life/sub-categories.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<title>Page Title</title>
+<title>Smart Life</title>
 
 <!-- Bootstrap: Latest compiled and minified CSS -->
 <link rel="stylesheet"	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -16,6 +16,7 @@
 <script	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- website Javascript -->
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
+<script src="http://guidoantoniomatteo.altervista.org/tim/js/small-menu.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
 <script src="http://guidoantoniomatteo.altervista.org/tim/js/smart-life/menu.js"></script>
 
