--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/innovazione.css">
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/guido.css">
 
+    <script>
+
+        var mobile = new XMLHttpRequest();
+        var mobileresponse = "http://guidoantoniomatteo.altervista.org/components/offerte/getOffertePiani.php?id=" + 1;
+        mobile.onreadystatechange = function () {
+        if (mobile.readyState == 4 && mobile.status == 200)
+            getOfferteMobile(mobile.responseText);
+        }
+        mobile.open("GET", mobileresponse, true);
+        mobile.send();
+
+        function getOfferteMobile(response) {
+            var arr = JSON.parse(response);
+            var i;
+            var out = "";
+            for(i = 0; i < arr.length; i++)  {
+
+                out+= '<div class="col-md-3 nomarginfull promotiontile"><a href="http://guidoantoniomatteo.altervista.org/tim/piani/piano.html?id='+ arr[i].id +'"><div class="promotionbox1" ><h3 class="description-white text-bold text">' + arr[i].nome + '</h3><p class="description description-white text-lighter">' + arr[i].descrizionepiano + '</p></div><div class="promotionbox2" ></br><h1 class="description-red">' + arr[i].prezzo + '</h1><p class="description description-black">' + arr[i].descrizioneattivazione + '</p></div></a></div>';
+            }
+            if(arr.length == 0){
+
+                out+='<div class="col-md-11 child-center"><h2 class="description description-red text-center">Al momento non sono presenti offerte <br>per questa categoria di piani</h1></div>';
+            }
+            document.getElementById("piani").innerHTML = out;
+        }
+    </script>
 </head>
 
 <body>
@@ -99,15 +125,12 @@
                 </div>
             </div>
                 <div class="row">
-                    <div class="col-md-4 resize background-blu">
+                    <div class="col-md-2 resize background-blu">
                         <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/homesconto.jpg" alt="italia tim">
                     </div>
-                    <div class="col-md-8 text-center background-blu">
-                        <br>
-                        <a href="http://guidoantoniomatteo.altervista.org/tim/chisiamo/innovazione.html" class="btn btn-default" role="button"><h1 class="description-blu">Chi Siamo</h1><p class="description description-blu">Scopri cosa vuol dire essere<br> cliente TIM.</p></a>
-                        <br><br>
-                        <button type="button" class="btn btn-default"><h1 class="description-blu">Il Gruppo</h1><p class="description description-blu">Scopri tutto sulla fusione<br> fra Telecom Italia e TIM.</p></button>
-                        <br><br>
+                    <div class="col-md-10 text-center background-blu promotion-image promotion-row">
+                        <div id="piani">
+                        </div>
                     </div>
                 </div>
                 <div class="row background-blu">
