--- a/smart-life-single.html
+++ b/smart-life-single.html
@@ -100,8 +100,8 @@
 						<div class="col-xs-3"> </div>
 						<div class="col-xs-6"><a href="">INFORMAZIONI</a></div>
 						<div class="col-xs-3">
-							<img src="../img/menu-mobile-closed-red.png" class="menu-closed"/>
-							<img src="../img/menu-mobile-open-red.png" class="menu-open"/>
+							<img src="http://guidoantoniomatteo.altervista.org/tim/img/menu-mobile-closed-red.png" class="menu-closed"/>
+							<img src="http://guidoantoniomatteo.altervista.org/tim/img/menu-mobile-open-red.png" class="menu-open"/>
 						</div>
 					</div>
 					<div id="button-descrizione" class="col-sm-4 col-xs-12 menu-link current-link"><a href="">Descrizione</a></div>
