--- a/asmaincategory.html
+++ b/asmaincategory.html
@@ -71,3 +71,62 @@
 </body>
 
 </html>
+
+
+                        <div class="row specifiche">
+                            <div class="col-md-12">
+                            <p>Display 4.5” 16 milioni colori Touch - Sistema Operativo Windows -  Phone 8 - Fotocamera 8.7 Megapixel con Flash</p>
+                            </div>
+                            <div class="col-md-12 line">
+                                <div class="row">
+                                    <div class="col-xs-4 left">
+                                        <h3>Dimensioni</h3>
+                                    </div>
+                                    <div class="col-xs-8 right">
+                                        <ul>
+                                            <li>129 x 70,6 x 8,5 mm</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 line">
+                                <div class="row">
+                                    <div class="col-xs-4 left">
+                                        <h3>Batteria</h3>
+                                    </div>
+                                    <div class="col-xs-8 right">
+                                        <ul>
+                                            <li>Capacità: 1900 mAh</li>
+                                            <li>Stand by: fino a 432 ore - Conversazione: fino a 1098 minuti</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 line">
+                                <div class="row">
+                                    <div class="col-xs-4 left">
+                                        <h3>Connettività</h3>
+                                    </div>
+                                    <div class="col-xs-8 right">
+                                        <ul>
+                                            <li>Bluetooth - Wi-Fi - Micro USB</li>
+                                            <li>802.11 a/b/n 2.4+5Ghz, HT40</li>
+                                            <li>Connettore auricolare da 3.5 mm</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 line">
+                                <div class="row">
+                                    <div class="col-xs-4 left">
+                                        <h3>Fotocamera</h3>
+                                    </div>
+                                    <div class="col-xs-8 right">
+                                        <ul>
+                                            <li>8.7 Mpixel/Flash</li>
+                                            <li>5 Mpx, F1.9 (fotocamera anteriore)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
