--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- website Javascript -->
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/menu.js"></script>
     <script src="http://guidoantoniomatteo.altervista.org/tim/js/template.js"></script>
+    <script src="http://guidoantoniomatteo.altervista.org/tim/js/standardimport.js"></script>
 
     <!-- website CSS -->
     <link rel="stylesheet" type="text/css" href="http://guidoantoniomatteo.altervista.org/tim/css/menu.css">
@@ -50,6 +51,75 @@
             }
             document.getElementById("piani").innerHTML = out;
         }
+
+        var offerteSL = new XMLHttpRequest();
+        var smartlife = "http://guidoantoniomatteo.altervista.org/components/offerte/getOfferteSL.php?id=" + 99;
+        offerteSL.onreadystatechange = function () {
+        if (offerteSL.readyState == 4 && offerteSL.status == 200)
+            getOfferteSL(offerteSL.responseText);
+        }
+        offerteSL.open("GET", smartlife, true);
+        offerteSL.send();
+
+
+        function getOfferteSL(response) {
+        var arr = JSON.parse(response);
+        var i;
+
+        var out = "";
+        for(i = 0; i < arr.length; i++)
+        {
+            out+= '<div class="col-md-5 no-padding-right-left resize"><img src="http://guidoantoniomatteo.altervista.org/tim/img/smart-life/single-SL/' + arr[i].id + '/home.png"></div><a href="http://guidoantoniomatteo.altervista.org/tim/smart-life/single-smart-life.html?id=' + arr[i].id + '"><div class="col-md-7 background-blu promotionSL center-block"><div class="row"><div class="promotionboxSLsmall1"><h2 class="description-gray text-bold">Scegli</h2><h1 class="description-blu text-bold">' + arr[i].nome + '</h1><h3 class=" description text-center">' + decodeHTMLEntities(arr[i].descrizioneshort) + '</h3></div><div class="promotionboxSLsmall2 resize"><img class="img-responsive child-center arrowpromotion" src="http://guidoantoniomatteo.altervista.org/tim/img/offerte/next.png" alt="freccia tim"><p class="description description-red">Per saperne di più</p></div></div></div></a>';
+        }
+        document.getElementById("smart-life").innerHTML = out;
+        }
+
+
+        var consigliato = new XMLHttpRequest();
+        var consigliatoresponse = "http://guidoantoniomatteo.altervista.org/components/offerte/getOffertePiani.php?id=" + -1;
+        consigliato.onreadystatechange = function () {
+        if (consigliato.readyState == 4 && consigliato.status == 200)
+            getOfferteConsigliato(consigliato.responseText);
+        }
+        consigliato.open("GET", consigliatoresponse, true);
+        consigliato.send();
+
+        function getOfferteConsigliato(response) {
+            var arr = JSON.parse(response);
+            var i;
+            var out = "";
+            for(i = 0; i < arr.length; i++)  {
+
+                out+= '<a href="http://guidoantoniomatteo.altervista.org/tim/piani/piano.html?id='+ arr[i].id +'"><div class="col-md-7 background-blu promotionSL center-block"><div class="row"><div class="promotionboxSLsmall1"><h2 class="description-gray text-bold">Scegli</h2><h1 class="description-blu text-bold">' + arr[i].nome + '</h1><h3 class=" description text-center">' + decodeHTMLEntities(arr[i].descrizionepiano) + '</h3><h2 class="description-red text-bold">' + arr[i].prezzo + '</h2></div><div class="promotionboxSLsmall2 resize"><img class="img-responsive child-center arrowpromotion" src="http://guidoantoniomatteo.altervista.org/tim/img/offerte/next.png" alt="freccia tim"><p class="description description-red">Per saperne di più</p></div></div></div></a>';
+            }
+            if(arr.length == 0){
+
+                out+='<div class="col-md-11 child-center"><h2 class="description description-red text-center">Al momento non sono presenti offerte <br>per questa categoria di piani</h1></div>';
+            }
+            document.getElementById("pianoconsigliato").innerHTML = out;
+        }
+
+        var offerteDispositivi = new XMLHttpRequest();
+        var dispositivi = "http://guidoantoniomatteo.altervista.org/components/offerte/getOfferteDispositivi.php?id=" + -1;
+        offerteDispositivi.onreadystatechange = function () {
+        if (offerteDispositivi.readyState == 4 && offerteDispositivi.status == 200)
+            getOfferteDispositivi(offerteDispositivi.responseText);
+        }
+        offerteDispositivi.open("GET", dispositivi, true);
+        offerteDispositivi.send();
+
+        function getOfferteDispositivi(response) {
+        var arr = JSON.parse(response);
+        var i;
+        var out = "";
+        for(i = 0; i < arr.length; i++)
+        {
+            out+= '<div class="col-md-3 nomarginfull promotiontile"><a href="http://guidoantoniomatteo.altervista.org/tim/device/singolodevice.html?id='+ arr[i].dispositivo +'"><img class="img-responsive devicesize center-block" src="' + arr[i].path + '" alt="' + arr[i].nome +'"><h2 class="nomargintop">' + arr[i].nome + '</h2><h1 class="nomargintop description-red">' + arr[i].prezzoscontato + '</h1></a></div>';
+        }
+        document.getElementById("dispositiviconsigliato").innerHTML = out;
+        }
+
+
     </script>
 </head>
 
@@ -124,15 +194,39 @@
                     </div>
                 </div>
             </div>
+                <div class="row" style="height: 20px;"></div>
                 <div class="row">
-                    <div class="col-md-2 resize background-blu">
-                        <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/homesconto.jpg" alt="italia tim">
+                    <div class="col-md-2 resize no-padding-right-left ">
+                        <img class="img-responsive img100 promotion-image" src="http://guidoantoniomatteo.altervista.org/tim/img/home/homesconto.png" alt="italia tim">
                     </div>
                     <div class="col-md-10 text-center background-blu promotion-image promotion-row">
-                        <div id="piani">
+                        <div class="row" id="piani">
                         </div>
                     </div>
                 </div>
+                <div class="row" style="height: 20px;"></div>
+                <div class="row background-blu">
+                    <div id="smart-life">
+                    </div>
+                </div>
+                <div class="row" style="height: 20px;"></div>
+                <div class="row background-blu">
+                    <div class="col-md-5 no-padding-right-left resize">
+                        <img src="http://guidoantoniomatteo.altervista.org/tim/img/home/pianoconsigliato.png">
+                    </div>
+                    <div id="pianoconsigliato" class="row">
+                    </div>
+                </div>
+                <div class="row" style="height: 20px;"></div>
+                <div class="row promotion-row">
+                    <div class="col-md-12">
+                        <h2 class="description-blu">I dispositivi scelti per te</h2>
+                    </div>
+                    <div id="dispositiviconsigliato" class="row">
+                    </div>
+                    <div class="row" style="height: 20px;"></div>
+                </div>
+                <div class="row" style="height: 20px;"></div>
                 <div class="row background-blu">
                     <div class="col-md-4 resize">
                         <img class="img-responsive img100" src="http://guidoantoniomatteo.altervista.org/tim/img/home/italia.jpg" alt="italia tim">
